# tck517-app-g

./: .agile-flow-version  .dockerignore  .env.example  .gitignore  .markdownlint.json  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  UPSTREAM.md  VERSIONING.md  alembic.ini  bootstrap.sh  pyproject.toml
.claude/: PROJECT.md  README.md  settings.template.json
.devcontainer/: devcontainer.json
.github/: actionlint.yaml
alembic/: env.py
app/: config.py  db.py  main.py  templates.py
docs/: .gitkeep  AGENT-ACTION-LOGGING.md  AGENT-WORKFLOW-SUMMARY.md  AGENTIC-CONTROLS.md  ARTIFACT-FLOW.md  BRANCHING-STRATEGY.md  CI-CD-GUIDE.md  CONTEXT-OPTIMIZATIONS.md  CONVENTIONAL-COMMITS.md  DISTRIBUTION.md  EPHEMERAL-PR-ENVIRONMENTS.md  FAQ.md  GETTING-STARTED.md  LEAN-PRINCIPLES.md  MAINTENANCE.md  MEMORY-ARCHITECTURE.md  PATTERN-LIBRARY.md  PLATFORM-GUIDE.md  PRODUCT-REQUIREMENTS.md  PRODUCT-ROADMAP.md  SENTRY-SETUP.md  SORTING-AND-BATCHING.md  TECHNICAL-ARCHITECTURE.md  TICKET-FORMAT.md  UPGRADING.md
scripts/: README-agent-linter.md  analyze-agent-actions.sh  analyze-agent-actions.test.sh  diagnose-cloudrun.sh  diagnose-cloudrun.test.sh  doctor.sh  lint-agent-policies.sh  provision-gcp-project.sh  provision-gcp-project.test.sh  provision-workshop-roster.sh  provision-workshop-roster.test.sh  roster.example.csv  setup-accounts.sh  setup-solo-mode.sh  template-sync.sh  (+7 more)
starters/fastapi/: README.md  pyproject.toml  render.yaml
starters/fastapi/app/: error_receiver.py  main.py
starters/fastapi/app/templates/: index.html
starters/fastapi/tests/: test_app.py  test_error_receiver.py
(+89 files in other folders)
